--- a/index.html
+++ b/index.html
@@ -1,13 +1,277 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Научиться учиться</title>
+  <link rel="stylesheet" href="pages/index.css">
+  <!-- <link rel="stylesheet" href="styles/normalize.css"> -->
 </head>
+
 <body>
   <div class="page">
+    <header class="header">
+      <img class="logo logo__place_header" src="images/logo_place_header.svg" alt="logo_place_header.img">
+      <h1 class="header__title">Научиться учиться</h1>
+      <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей
+        жизни?
+        <a class="header__link" target="_blank" href="#"> Узнать &rarr;</a>
+      </p>
+      <img class="header__main-illustration" src="images/header-image.png" alt="Опять_двойка_image">
+      <div class="header__square-pic rotation"></div>
+    </header>
 
+    <main class="content">
+
+      <section class="description">
+        <div class="two-columns">
+          <h4 class="two-columns__brief">Главные проблемы в обучении</h4>
+          <div class="two-columns__main-text">
+            <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать
+              материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше
+              сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит
+              пользы.</p>
+            <p class="two-columns__paragraph"><span class="two-columns__span-accent">Вывод: </span> учиться тоже нужно
+              уметь, но почему-то этому мало где учат. Что с этим делать?</p>
+            <p class="two-columns__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению,
+              сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
+          </div>
+        </div>
+      </section>
+
+      <section class="techniques content__center-block">
+        <h1 class="section-title content__center-block">Техники обучения</h1>
+        <h3 class="section-subtitle content__center-block">Пять практик от Барбары Оакли</h3>
+        <div class="cards content__center-block">
+          <div class="cards__item">
+            <img class="cards__image" src="images/cards-attention.png" alt="attention_img">
+            <h3 class="cards__title">Два вида внимания</h3>
+            <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное
+              мышление.</p>
+          </div>
+          <div class="cards__item">
+            <img class="cards__image" src="images/cards-recall.png" alt="recall_img">
+            <h4 class="cards__title">Recall</h4>
+            <p class="cards__description">Вспоминайте изученное — это позволит соединить разрозненные порции памяти.</p>
+          </div>
+          <div class="cards__item">
+            <img class="cards__image" src="images/cards-interliving.png" alt="interliving_img">
+            <h4 class="cards__title">Интерливинг</h4>
+            <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
+          </div>
+          <div class="cards__item">
+            <img class="cards__image" src="images/cards-question.png" alt="question_img">
+            <h4 class="cards__title">Вопросы</h4>
+            <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно
+              волнует.</p>
+          </div>
+          <div class="cards__item">
+            <img class="cards__image" src="images/cards-competence.png" alt="competence_img">
+            <h4 class="cards__title">Иллюзия компетентности</h4>
+            <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы
+              владеете новой темой.</p>
+          </div>
+        </div>
+      </section>
+
+      <section class="video">
+        <h1 class="section-title content__center-block">Видео на TED</h1>
+        <h3 class="section-subtitle content__center-block">Для тех, кто любит прокрастинировать</h3>
+        <div class="video__iframes">
+          <iframe class="video__iframe" src="https://www.youtube.com/embed/arj7oStGLkU" allowfullscreen></iframe>
+          <iframe class="video__iframe" src="https://www.youtube.com/embed/5MgBikgcWnY" allowfullscreen></iframe>
+        </div>
+      </section>
+
+      <section class="oakley">
+        <div class="two-columns">
+          <h4 class="two-columns__brief">История Барбары Оакли.</h4>
+          <div class="two-columns__main-text">
+            <p class="two-columns__paragraph">
+              С детства Барбаре не давалась математика. Она считала себя законченным гуманитарием, причём далеко не
+              самым умным.
+              В армии она изучала русский язык, чтобы получить надбавку, да так успешно, что её выдвинули в командиры.
+              Но для продвижения по службе нужно было сдавать математику. И тогда Барбара придумала свой подход к точным
+              наукам. Оказалось, если вам что-то «плохо даётся»,
+              ваши добытые трудом знания гораздо глубже, чем у тех, кому всё ясно с первого взгляда.
+            </p>
+          </div>
+        </div>
+      </section>
+
+      <section class="feynman" title="feynman_image">
+        <h1 class="feynman__title">Метод Фейнмана</h1>
+        <h3 class="feynman__subtitle">Выучить и не забыть</h3>
+        <a class="feynman__link" target="_blank" href="#">Подробнее &rarr;</a>
+      </section>
+
+      <section class="digits">
+        <h2 class="section-title content__center-block">Цифры и факты</h2>
+        <h3 class="section-subtitle content__center-block">Про учёбу и мозг</h3>
+        <div class="table content__center-block">
+          <div class="table__cell">
+            <h4 class="table__heading">86 миллиардов</h4>
+            <p class="table__text">Число нейронов в мозге человека</p>
+          </div>
+          <div class="table__cell">
+            <h4 class="table__heading">2.1 миллиарда</h4>
+            <p class="table__text">Число нуждающихся в повышении квалификации</p>
+            <p class="table__text">Всемирный Банк, 2017</p>
+          </div>
+          <div class="table__cell">
+            <h4 class="table__heading">1000 терабайт</h4>
+            <p class="table__text">Объём памяти человека</p>
+          </div>
+          <div class="table__cell">
+            <h4 class="table__heading">500 триллионов</h4>
+            <p class="table__text">Число ответственных за обучение нервных синапсов у взрослого человека</p>
+          </div>
+          <div class="table__cell">
+            <h4 class="table__heading">420 миллионов</h4>
+            <p class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства
+            <p class="table__text">Всемирный Банк, 2017</p>
+          </div>
+          <div class="table__cell">
+            <h4 class="table__heading">17–20 лет</h4>
+            <p class="table__text">Пик обучаемости</p>
+          </div>
+          <div class="table__cell">
+            <h4 class="table__heading">1885 год</h4>
+            <p class="table__text">Открытие кривой забывания</p>
+          </div>
+          <div class="table__cell">
+            <h4 class="table__heading">1889 год</h4>
+            <p class="table__text">Открытие условного рефлекса</p>
+          </div>
+        </div>
+      </section>
+
+      <section class="khan">
+        <div class="khan__container">
+          <h4 class="khan__author">Салман Хан</h4>
+          <h1 class="khan__title">Весь мир — школа</h1>
+          <p class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему
+            миру. Книгу «Весь мир —
+            школа» нужно прочитать всем, кто занимается образованием —
+            так учащиеся повсюду смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.</p>
+          <h4 class="khan__quote-author">Джордж Лукас</h4>
+          <h4 class="khan__quote-author-subline">Кинорежиссер, продюсер</h4>
+          <div class="khan__book-container">
+            <img class="khan__book-pic" src="images/khan-book.jpg" alt="Весь мир -школа">
+            <a class="khan__buy-link" target="_blank" href="#">Купить книгу &rarr;</a>
+          </div>
+        </div>
+      </section>
+
+      <section class="kaufman">
+        <h2 class="section-title section-title_theme_dark content__center-block">Принципы обучения</h2>
+        <h3 class="section-subtitle section-subtitle_theme_dark content__center-block">от Джоша Кауфмана</h3>
+        <div class="table table_theme_dark  content__center-block">
+          <div class="table__cell table__cell_theme_dark">
+            <h4 class="table__heading table__heading_theme_dark">1</h4>
+            <p class="table__text table__text_theme_dark">Выберите привлекательный проект.</p>
+          </div>
+          <div class="table__cell table__cell_theme_dark">
+            <h4 class="table__heading table__heading_theme_dark">2</h4>
+            <p class="table__text table__text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</p>
+          </div>
+          <div class="table__cell table__cell_theme_dark">
+            <h4 class="table__heading table__heading_theme_dark">3</h4>
+            <p class="table__text table__text_theme_dark">Определите целевой уровень мастерства.</p>
+          </div>
+          <div class="table__cell table__cell_theme_dark">
+            <h4 class="table__heading table__heading_theme_dark">4</h4>
+            <p class="table__text table__text_theme_dark">Разбейте навык на элементы.</p>
+          </div>
+          <div class="table__cell table__cell_theme_dark">
+            <h4 class="table__heading table__heading_theme_dark">5</h4>
+            <p class="table__text table__text_theme_dark">Приготовьте всё необходимое для занятий.</p>
+          </div>
+          <div class="table__cell table__cell_theme_dark">
+            <h4 class="table__heading table__heading_theme_dark">6</h4>
+            <p class="table__text table__text_theme_dark">Устраните препятствия для занятий.</p>
+          </div>
+          <div class="table__cell table__cell_theme_dark">
+            <h4 class="table__heading table__heading_theme_dark">7</h4>
+            <p class="table__text table__text_theme_dark">Выделите специальное время для занятий.</p>
+          </div>
+          <div class="table__cell table__cell_theme_dark">
+            <h4 class="table__heading table__heading_theme_dark">8</h4>
+            <p class="table__text table__text_theme_dark">Создайте быстрые петли обратной связи.</p>
+          </div>
+          <div class="table__cell table__cell_theme_dark">
+            <h4 class="table__heading table__heading_theme_dark">9</h4>
+            <p class="table__text table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.
+            </p>
+          </div>
+          <div class="table__cell table__cell_theme_dark">
+            <h4 class="table__heading table__heading_theme_dark">10</h4>
+            <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
+          </div>
+        </div>
+        <img class="kaufman__triangle rotation" src="./images/kaufman-triangle.svg" alt="Треугольник">
+      </section>
+
+      <section class="resources">
+        <h2 class="section-title content__center-block">Полезные ресурсы</h2>
+        <h3 class="section-subtitle content__center-block">Больше материалов о техниках и лайфхаках обучения</h3>
+        <div class="resources__logo-zone">
+          <a target="_blank" href="https://arzamas.academy/"><img class="resources__link"
+              src="./images/logo/resources-arzamas.svg" alt="resources-arzamas_img"></a>
+          <a target="_blank" href="https://nplus1.ru/"><img class="resources__link" src="./images/logo/resources-n1.svg"
+              alt="n1_img"></a>
+          <a target="_blank" href="https://strelka.com/ru/"><img class="resources__link"
+              src="./images/logo/resources-strelka.svg" alt="strelka_img"></a>
+          <a target="_blank" href="https://polka.academy/"><img class="resources__link"
+              src="./images/logo/resources-polka.svg" alt="polka_img"></a>
+        </div>
+      </section>
+    </main>
+
+    <footer class="footer">
+      <div class="footer__columns">
+        <div class="footer__column footer__column_content_copyright">
+          <img class="logo logo_place_footer" src="./images/logo_place_footer.svg" alt="Логотип Яндекс.Практикум">
+          <p class="footer__author">&copyАлександр Платонов</p>
+        </div>
+        <nav class="footer__column footer__column_content_info">
+          <h2 class="footer__column-heading">О Практикуме</h2>
+          <ul class="footer__column-links">
+            <li>
+              <a class="footer__column-link" target="_blank" href="#">Главная</a>
+            </li>
+            <li>
+              <a class="footer__column-link" target="_blank" href="#">Концепция</a>
+            </li>
+            <li>
+              <a class="footer__column-link" target="_blank" href="#">Наставники</a>
+            </li>
+          </ul>
+        </nav>
+        <nav class="footer__column footer__column_content_social">
+          <h2 class="footer__column-heading">Соцсети</h2>
+          <ul class="footer__column-links">
+            <li>
+              <a class="footer__column-link" target="_blank" href="#">
+                <img class="footer__social-icon" src="./images/facebook_color_white.svg" alt="Facebook">Facebook
+              </a>
+            </li>
+            <li>
+              <a class="footer__column-link" target="_blank" href="#">
+                <img class="footer__social-icon" src="./images/vk_color_white.svg" alt="Vk">ВКонтакте
+              </a>
+            </li>
+            <li>
+              <a class="footer__column-link" target="_blank" href="#">
+                <img class="footer__social-icon" src="./images/instagram_color_white.svg" alt="Instagram">Instagram
+              </a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </footer>
   </div>
 </body>
+
 </html>
