--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
       <div class="footer__columns">
         <div class="footer__column footer__column_content_copyright">
           <img class="logo logo_place_footer" src="./images/logo_place_footer.svg" alt="Логотип Яндекс.Практикум">
-          <p class="footer__author">&copyАлександр Платонов</p>
+          <p class="footer__author">&copy;Александр Платонов</p>
         </div>
         <nav class="footer__column footer__column_content_info">
           <h2 class="footer__column-heading">О Практикуме</h2>
