--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 <body>
   <div class="page">
     <header class="header">
-      <img class="logo logo__place_header" src="images/logo_place_header.svg" alt="logo_place_header.img">
+      <img class="logo logo__place_header" src="images/logo_place_header.svg" alt="Логотип ЯП">
       <h1 class="header__title">Научиться учиться</h1>
       <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей
         жизни?
         <a class="header__link" target="_blank" href="#"> Узнать &rarr;</a>
       </p>
-      <img class="header__main-illustration" src="images/header-image.png" alt="Опять_двойка_image">
+      <img class="header__main-illustration" src="images/header-image.png" alt="Опять двойка">
       <div class="header__square-pic rotation"></div>
     </header>
 
@@ -45,29 +45,29 @@
         <h3 class="section-subtitle content__center-block">Пять практик от Барбары Оакли</h3>
         <div class="cards content__center-block">
           <div class="cards__item">
-            <img class="cards__image" src="images/cards-attention.png" alt="attention_img">
+            <img class="cards__image" src="images/cards-attention.png" alt="Два вида внимания">
             <h3 class="cards__title">Два вида внимания</h3>
             <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное
               мышление.</p>
           </div>
           <div class="cards__item">
-            <img class="cards__image" src="images/cards-recall.png" alt="recall_img">
+            <img class="cards__image" src="images/cards-recall.png" alt="Воспоминание">
             <h4 class="cards__title">Recall</h4>
             <p class="cards__description">Вспоминайте изученное — это позволит соединить разрозненные порции памяти.</p>
           </div>
           <div class="cards__item">
-            <img class="cards__image" src="images/cards-interliving.png" alt="interliving_img">
+            <img class="cards__image" src="images/cards-interliving.png" alt="Интерливинг">
             <h4 class="cards__title">Интерливинг</h4>
             <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
           </div>
           <div class="cards__item">
-            <img class="cards__image" src="images/cards-question.png" alt="question_img">
+            <img class="cards__image" src="images/cards-question.png" alt="Вопросы">
             <h4 class="cards__title">Вопросы</h4>
             <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно
               волнует.</p>
           </div>
           <div class="cards__item">
-            <img class="cards__image" src="images/cards-competence.png" alt="competence_img">
+            <img class="cards__image" src="images/cards-competence.png" alt="Компетенция">
             <h4 class="cards__title">Иллюзия компетентности</h4>
             <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы
               владеете новой темой.</p>
@@ -218,13 +218,13 @@
         <h3 class="section-subtitle content__center-block">Больше материалов о техниках и лайфхаках обучения</h3>
         <div class="resources__logo-zone">
           <a target="_blank" href="https://arzamas.academy/"><img class="resources__link"
-              src="./images/logo/resources-arzamas.svg" alt="resources-arzamas_img"></a>
+              src="./images/logo/resources-arzamas.svg" alt="Арзамас"></a>
           <a target="_blank" href="https://nplus1.ru/"><img class="resources__link" src="./images/logo/resources-n1.svg"
-              alt="n1_img"></a>
+              alt="N+1"></a>
           <a target="_blank" href="https://strelka.com/ru/"><img class="resources__link"
-              src="./images/logo/resources-strelka.svg" alt="strelka_img"></a>
+              src="./images/logo/resources-strelka.svg" alt="СТРЕЛКА"></a>
           <a target="_blank" href="https://polka.academy/"><img class="resources__link"
-              src="./images/logo/resources-polka.svg" alt="polka_img"></a>
+              src="./images/logo/resources-polka.svg" alt="ПОЛКА"></a>
         </div>
       </section>
     </main>
@@ -232,7 +232,7 @@
     <footer class="footer">
       <div class="footer__columns">
         <div class="footer__column footer__column_content_copyright">
-          <img class="logo logo_place_footer" src="./images/logo_place_footer.svg" alt="Логотип Яндекс.Практикум">
+          <img class="logo logo_place_footer" src="./images/logo_place_footer.svg" alt="Логотип ЯП">
           <p class="footer__author">&copy;Александр Платонов</p>
         </div>
         <nav class="footer__column footer__column_content_info">
@@ -259,7 +259,7 @@
             </li>
             <li>
               <a class="footer__column-link" target="_blank" href="#">
-                <img class="footer__social-icon" src="./images/vk_color_white.svg" alt="Vk">ВКонтакте
+                <img class="footer__social-icon" src="./images/vk_color_white.svg" alt="ВКонтакте">ВКонтакте
               </a>
             </li>
             <li>
