--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         </div>
       </section>
 
-      <section class="feynman" title="feynman_image">
+      <section class="feynman" title="Фейнман">
         <h2 class="feynman__title">Метод Фейнмана</h2>
         <h3 class="feynman__subtitle">Выучить и не забыть</h3>
         <a class="feynman__link" target="_blank" href="#">Подробнее &rarr;</a>
