--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
       </section>
 
       <section class="techniques content__center-block">
-        <h2 class="section-title content__center-block">Техники обучения</h2>
-        <h3 class="section-subtitle content__center-block">Пять практик от Барбары Оакли</h3>
-        <div class="cards content__center-block">
+        <h2 class="section-title">Техники обучения</h2>
+        <h3 class="section-subtitle">Пять практик от Барбары Оакли</h3>
+        <div class="cards">
           <div class="cards__item">
             <img class="cards__image" src="images/cards-attention.png" alt="Два вида внимания">
             <h3 class="cards__title">Два вида внимания</h3>
@@ -76,8 +76,8 @@
       </section>
 
       <section class="video">
-        <h2 class="section-title content__center-block">Видео на TED</h2>
-        <h3 class="section-subtitle content__center-block">Для тех, кто любит прокрастинировать</h3>
+        <h2 class="section-title">Видео на TED</h2>
+        <h3 class="section-subtitle">Для тех, кто любит прокрастинировать</h3>
         <div class="video__iframes">
           <iframe class="video__iframe" src="https://www.youtube.com/embed/arj7oStGLkU" allowfullscreen></iframe>
           <iframe class="video__iframe" src="https://www.youtube.com/embed/5MgBikgcWnY" allowfullscreen></iframe>
@@ -106,10 +106,10 @@
         <a class="feynman__link" target="_blank" href="#">Подробнее &rarr;</a>
       </section>
 
-      <section class="digits">
-        <h2 class="section-title content__center-block">Цифры и факты</h2>
-        <h3 class="section-subtitle content__center-block">Про учёбу и мозг</h3>
-        <div class="table content__center-block">
+      <section class="digits ">
+        <h2 class="section-title">Цифры и факты</h2>
+        <h3 class="section-subtitle">Про учёбу и мозг</h3>
+        <div class="table">
           <div class="table__cell">
             <h4 class="table__heading">86 миллиардов</h4>
             <p class="table__text">Число нейронов в мозге человека</p>
@@ -158,16 +158,16 @@
           <h4 class="khan__quote-author">Джордж Лукас</h4>
           <h4 class="khan__quote-author-subline">Кинорежиссер, продюсер</h4>
           <div class="khan__book-container">
-            <img class="khan__book-pic" src="images/khan-book.jpg" alt="Весь мир -школа">
+            <img class="khan__book-pic" src="images/khan-book.jpg" alt="Весь мир-школа">
             <a class="khan__buy-link" target="_blank" href="#">Купить книгу &rarr;</a>
           </div>
         </div>
       </section>
 
       <section class="kaufman">
-        <h2 class="section-title section-title_theme_dark content__center-block">Принципы обучения</h2>
-        <h3 class="section-subtitle section-subtitle_theme_dark content__center-block">от Джоша Кауфмана</h3>
-        <div class="table table_theme_dark  content__center-block">
+        <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
+        <h3 class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</h3>
+        <div class="table table_theme_dark">
           <div class="table__cell table__cell_theme_dark">
             <h4 class="table__heading table__heading_theme_dark">1</h4>
             <p class="table__text table__text_theme_dark">Выберите привлекательный проект.</p>
@@ -214,8 +214,8 @@
       </section>
 
       <section class="resources">
-        <h2 class="section-title content__center-block">Полезные ресурсы</h2>
-        <h3 class="section-subtitle content__center-block">Больше материалов о техниках и лайфхаках обучения</h3>
+        <h2 class="section-title">Полезные ресурсы</h2>
+        <h3 class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</h3>
         <div class="resources__logo-zone">
           <a target="_blank" href="https://arzamas.academy/"><img class="resources__link"
               src="./images/logo/resources-arzamas.svg" alt="Арзамас"></a>
