--- a/index.html
+++ b/index.html
@@ -238,13 +238,13 @@
         <nav class="footer__column footer__column_content_info">
           <h2 class="footer__column-heading">О Практикуме</h2>
           <ul class="footer__column-links">
-            <li>
+            <li class="footer__column-links">
               <a class="footer__column-link" target="_blank" href="#">Главная</a>
             </li>
-            <li>
+            <li class="footer__column-links">
               <a class="footer__column-link" target="_blank" href="#">Концепция</a>
             </li>
-            <li>
+            <li class="footer__column-links">
               <a class="footer__column-link" target="_blank" href="#">Наставники</a>
             </li>
           </ul>
@@ -252,17 +252,17 @@
         <nav class="footer__column footer__column_content_social">
           <h2 class="footer__column-heading">Соцсети</h2>
           <ul class="footer__column-links">
-            <li>
+            <li class="footer__column-links">
               <a class="footer__column-link" target="_blank" href="#">
                 <img class="footer__social-icon" src="./images/facebook_color_white.svg" alt="Facebook">Facebook
               </a>
             </li>
-            <li>
+            <li class="footer__column-links">
               <a class="footer__column-link" target="_blank" href="#">
                 <img class="footer__social-icon" src="./images/vk_color_white.svg" alt="ВКонтакте">ВКонтакте
               </a>
             </li>
-            <li>
+            <li class="footer__column-links">
               <a class="footer__column-link" target="_blank" href="#">
                 <img class="footer__social-icon" src="./images/instagram_color_white.svg" alt="Instagram">Instagram
               </a>
@@ -271,6 +271,7 @@
         </nav>
       </div>
     </footer>
+
   </div>
 </body>
 
