--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <div class="page">
     <header class="header">
-      <img class="logo logo__place_header" src="images/logo_place_header.svg" alt="Логотип ЯП">
+      <img class="logo logo_place_header" src="images/logo_place_header.svg" alt="Логотип ЯП">
       <h1 class="header__title">Научиться учиться</h1>
       <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей
         жизни?
@@ -79,8 +79,10 @@
         <h2 class="section-title">Видео на TED</h2>
         <h3 class="section-subtitle">Для тех, кто любит прокрастинировать</h3>
         <div class="video__iframes">
-          <iframe class="video__iframe" src="https://www.youtube.com/embed/arj7oStGLkU" allowfullscreen></iframe>
-          <iframe class="video__iframe" src="https://www.youtube.com/embed/5MgBikgcWnY" allowfullscreen></iframe>
+          <iframe class="video__iframe" src="https://www.youtube.com/embed/arj7oStGLkU" style="border:none"
+            allowfullscreen></iframe>
+          <iframe class="video__iframe" src="https://www.youtube.com/embed/5MgBikgcWnY" style="border:none"
+            allowfullscreen></iframe>
         </div>
       </section>
 
@@ -218,13 +220,17 @@
         <h3 class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</h3>
         <div class="resources__logo-zone">
           <a target="_blank" href="https://arzamas.academy/"><img class="resources__link"
-              src="./images/logo/resources-arzamas.svg" alt="Арзамас"></a>
+            src="./images/logo/resources-arzamas.svg" alt="Арзамас">
+          </a>
           <a target="_blank" href="https://nplus1.ru/"><img class="resources__link" src="./images/logo/resources-n1.svg"
-              alt="N+1"></a>
+            alt="N+1">
+          </a>
           <a target="_blank" href="https://strelka.com/ru/"><img class="resources__link"
-              src="./images/logo/resources-strelka.svg" alt="СТРЕЛКА"></a>
+            src="./images/logo/resources-strelka.svg" alt="СТРЕЛКА">
+          </a>
           <a target="_blank" href="https://polka.academy/"><img class="resources__link"
-              src="./images/logo/resources-polka.svg" alt="ПОЛКА"></a>
+            src="./images/logo/resources-polka.svg" alt="ПОЛКА">
+          </a>
         </div>
       </section>
     </main>
@@ -238,13 +244,13 @@
         <nav class="footer__column footer__column_content_info">
           <h2 class="footer__column-heading">О Практикуме</h2>
           <ul class="footer__column-links">
-            <li class="footer__column-links">
+            <li class="footer__link-style">
               <a class="footer__column-link" target="_blank" href="#">Главная</a>
             </li>
-            <li class="footer__column-links">
+            <li class="footer__link-style">
               <a class="footer__column-link" target="_blank" href="#">Концепция</a>
             </li>
-            <li class="footer__column-links">
+            <li class="footer__link-style">
               <a class="footer__column-link" target="_blank" href="#">Наставники</a>
             </li>
           </ul>
@@ -252,17 +258,17 @@
         <nav class="footer__column footer__column_content_social">
           <h2 class="footer__column-heading">Соцсети</h2>
           <ul class="footer__column-links">
-            <li class="footer__column-links">
+            <li class="footer__link-style">
               <a class="footer__column-link" target="_blank" href="#">
                 <img class="footer__social-icon" src="./images/facebook_color_white.svg" alt="Facebook">Facebook
               </a>
             </li>
-            <li class="footer__column-links">
+            <li class="footer__link-style">
               <a class="footer__column-link" target="_blank" href="#">
                 <img class="footer__social-icon" src="./images/vk_color_white.svg" alt="ВКонтакте">ВКонтакте
               </a>
             </li>
-            <li class="footer__column-links">
+            <li class="footer__link-style">
               <a class="footer__column-link" target="_blank" href="#">
                 <img class="footer__social-icon" src="./images/instagram_color_white.svg" alt="Instagram">Instagram
               </a>
