--- a/index.html
+++ b/index.html
@@ -79,10 +79,8 @@
         <h2 class="section-title">Видео на TED</h2>
         <h3 class="section-subtitle">Для тех, кто любит прокрастинировать</h3>
         <div class="video__iframes">
-          <iframe class="video__iframe" src="https://www.youtube.com/embed/arj7oStGLkU" style="border:none"
-            allowfullscreen></iframe>
-          <iframe class="video__iframe" src="https://www.youtube.com/embed/5MgBikgcWnY" style="border:none"
-            allowfullscreen></iframe>
+          <iframe class="video__iframe" src="https://www.youtube.com/embed/arj7oStGLkU" allowfullscreen></iframe>
+          <iframe class="video__iframe" src="https://www.youtube.com/embed/5MgBikgcWnY" allowfullscreen></iframe>
         </div>
       </section>
 
@@ -219,17 +217,17 @@
         <h2 class="section-title">Полезные ресурсы</h2>
         <h3 class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</h3>
         <div class="resources__logo-zone">
-          <a target="_blank" href="https://arzamas.academy/"><img class="resources__link"
-            src="./images/logo/resources-arzamas.svg" alt="Арзамас">
+          <a target="_blank" href="https://arzamas.academy/">
+            <img class="resources__link" src="./images/logo/resources-arzamas.svg" alt="Арзамас">
           </a>
-          <a target="_blank" href="https://nplus1.ru/"><img class="resources__link" src="./images/logo/resources-n1.svg"
-            alt="N+1">
+          <a target="_blank" href="https://nplus1.ru/">
+            <img class="resources__link" src="./images/logo/resources-n1.svg" alt="N+1">
           </a>
-          <a target="_blank" href="https://strelka.com/ru/"><img class="resources__link"
-            src="./images/logo/resources-strelka.svg" alt="СТРЕЛКА">
+          <a target="_blank" href="https://strelka.com/ru/">
+            <img class="resources__link" src="./images/logo/resources-strelka.svg" alt="СТРЕЛКА">
           </a>
-          <a target="_blank" href="https://polka.academy/"><img class="resources__link"
-            src="./images/logo/resources-polka.svg" alt="ПОЛКА">
+          <a target="_blank" href="https://polka.academy/">
+            <img class="resources__link" src="./images/logo/resources-polka.svg" alt="ПОЛКА">
           </a>
         </div>
       </section>
